--- a/RecordsCollectorWeb/RecordsCollectorWeb.csproj
+++ b/RecordsCollectorWeb/RecordsCollectorWeb.csproj
@@ -110,6 +110,7 @@
   <ItemGroup>
     <Folder Include="bin\" />
     <Folder Include="obj\Debug\TempPE\" />
+    <Folder Include="obj\Release\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
