--- a/RecordsCollectorWeb/RecordsCollectorWeb.csproj
+++ b/RecordsCollectorWeb/RecordsCollectorWeb.csproj
@@ -51,7 +51,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ClientBin\slAudioUpload.xap" />
+    <Content Include="bin\RecordsCollectorWeb.dll" />
+    <Content Include="bin\RecordsCollectorWeb.pdb" />
+    <Content Include="slAudioUpload.xap" />
     <Content Include="css\bootstrap-responsive.css" />
     <Content Include="css\bootstrap-responsive.min.css" />
     <Content Include="css\bootstrap.css" />
@@ -85,6 +87,12 @@
     <Content Include="js\jquery.js" />
     <Content Include="js\onerror.js" />
     <Content Include="js\Silverlight.js" />
+    <Content Include="obj\Debug\RecordsCollectorWeb.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\RecordsCollectorWeb.dll" />
+    <Content Include="obj\Debug\RecordsCollectorWeb.pdb" />
+    <Content Include="obj\Release\RecordsCollectorWeb.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Release\RecordsCollectorWeb.dll" />
+    <Content Include="obj\Release\RecordsCollectorWeb.pdb" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -106,11 +114,12 @@
   <ItemGroup>
     <Content Include="FileUpload.ashx" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Release\DesignTimeResolveAssemblyReferencesInput.cache" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="bin\" />
+    <Folder Include="ClientBin\" />
     <Folder Include="obj\Debug\TempPE\" />
-    <Folder Include="obj\Release\" />
+    <Folder Include="obj\Release\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
