--- a/RecordsCollectorApp.csproj
+++ b/RecordsCollectorApp.csproj
@@ -62,6 +62,8 @@
   <ItemGroup>
     <Content Include="Administration.aspx" />
     <Content Include="AdminLogin.aspx" />
+    <Content Include="ClientBin\recordNames.xap" />
+    <Content Include="ClientBin\recordNumbers.xap" />
     <Content Include="ClientBin\slAudioUpload.xap" />
     <Content Include="css\bootstrap-responsive.css" />
     <Content Include="css\bootstrap-responsive.min.css" />
@@ -107,6 +109,19 @@
     <Content Include="js\Silverlight.js" />
     <Content Include="Names.aspx" />
     <Content Include="Numbers.aspx" />
+    <None Include="Service References\ServiceReference1\DataBaseAccessService.disco" />
+    <None Include="Service References\ServiceReference1\configuration91.svcinfo" />
+    <None Include="Service References\ServiceReference1\configuration.svcinfo" />
+    <None Include="Service References\ServiceReference1\RecordsCollectorApp.ServiceReference1.NameClass.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\ServiceReference1\RecordsCollectorApp.ServiceReference1.NumberClass.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\ServiceReference1\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -114,6 +129,13 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <None Include="Service References\ServiceReference1\DataBaseAccessService1.wsdl" />
+    <None Include="Service References\ServiceReference1\DataBaseAccessService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReference1\DataBaseAccessService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Administration.aspx.cs">
@@ -163,6 +185,11 @@
       <DependentUpon>Numbers.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\ServiceReference1\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="SilverlightFaultBehavior.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -170,6 +197,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ServiceReference1\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ServiceReference1\DataBaseAccessService.wsdl" />
+    <None Include="Service References\ServiceReference1\DataBaseAccessService.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
