new default,names xap,names

--- a/RecordsCollectorApp.csproj
+++ b/RecordsCollectorApp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Content Include="Administration.aspx" />
     <Content Include="AdminLogin.aspx" />
+    <Content Include="ClientBin\recordNames.xap" />
     <Content Include="ClientBin\recordNames2.xap" />
     <Content Include="ClientBin\recordNumbers.xap" />
     <Content Include="ClientBin\slAudioUpload.xap" />
